--- a/contact.html
+++ b/contact.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Page || Agrikon || HTML Template For Agriculture Farm & Farmers</title>
+    <title>Liên Hệ || GREEN SUN HANAM || Giải pháp Pin Năng Lượng Xanh</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicons/site.webmanifest">
-    <meta name="description" content="Agrikon HTML Template For Agriculture Farm & Farmers">
+    <meta name="description" content="GREEN SUN HANAM - Chuyên sản xuất và cung cấp pin điện thoại năng lượng xanh, pin sạc an toàn và thân thiện với môi trường">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -48,10 +48,10 @@
                             <a href="#" class="fab fa-pinterest-p"></a>
                             <a href="#" class="fab fa-instagram"></a>
                         </div><!-- /.topbar__social -->
-                        <p>Welcome to Agriculture HTML Template</p>
+                        <p>Chào mừng đến với GREEN SUN HANAM</p>
                     </div><!-- /.topbar__left -->
                     <div class="topbar__right">
-                        <a href="#"><i class="agrikon-icon-email"></i>needhelp@company.com</a>
+                        <a href="#"><i class="agrikon-icon-email"></i>info@greensunhanam.com</a>
                         <a href="#"><i class="agrikon-icon-clock"></i>Mon - Sat 8:00 - 6:30, Sunday - CLOSED</a>
                     </div><!-- /.topbar__right -->
                 </div><!-- /.container -->
@@ -64,42 +64,42 @@
                     </div><!-- /.logo-box -->
                     <ul class="main-menu__list">
                         <li class="dropdown">
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Trang Chủ</a>
                             <ul>
                                 <li>
-                                    <a href="index.html">Home One</a>
+                                    <a href="index.html">Trang Chủ 1</a>
                                 </li>
-                                <li><a href="index-2.html">Home Two</a></li>
+                                <li><a href="index-2.html">Trang Chủ 2</a></li>
                                 <li class="dropdown">
-                                    <a href="#">Header Styles</a>
+                                    <a href="#">Kiểu Tiêu Đề</a>
                                     <ul>
-                                        <li><a href="index.html">Header One</a></li>
-                                        <li><a href="index-2.html">Header Two</a></li>
+                                        <li><a href="index.html">Tiêu Đề 1</a></li>
+                                        <li><a href="index-2.html">Tiêu Đề 2</a></li>
                                     </ul>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="about.html">Giới Thiệu</a>
                         </li>
-                        <li class="dropdown"><a href="#">Pages</a>
+                        <li class="dropdown"><a href="#">Trang</a>
                             <ul>
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="service-details.html">Service Details</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="services.html">Dịch Vụ</a></li>
+                                <li><a href="service-details.html">Chi Tiết Dịch Vụ</a></li>
+                                <li><a href="contact.html">Liên Hệ</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="projects.html">Projects</a>
+                            <a href="projects.html">Dự Án</a>
                             <ul>
-                                <li><a href="projects.html">Projects</a></li>
-                                <li><a href="project-details.html">Projects Details</a></li>
+                                <li><a href="projects.html">Dự Án</a></li>
+                                <li><a href="project-details.html">Chi Tiết Dự Án</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a href="blog.html">News</a>
+                        <li class="dropdown"><a href="blog.html">Tin Tức</a>
                             <ul>
-                                <li><a href="blog.html">News</a></li>
-                                <li><a href="blog-details.html">News Details</a></li>
+                                <li><a href="blog.html">Tin Tức</a></li>
+                                <li><a href="blog-details.html">Chi Tiết Tin Tức</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -111,7 +111,7 @@
                         <a href="tel:92-666-888-0000" class="main-header__info-phone">
                             <i class="agrikon-icon-phone-call"></i>
                             <span class="main-header__info-phone-content">
-                                <span class="main-header__info-phone-text">Call Anytime</span>
+                                <span class="main-header__info-phone-text">Gọi Ngay</span>
                                 <span class="main-header__info-phone-title">92 666 888 0000</span>
                             </span><!-- /.main-header__info-phone-content -->
                         </a><!-- /.main-header__info-phone -->
@@ -131,9 +131,9 @@
                 <ul class="thm-breadcrumb list-unstyled">
                     <li><a href="index.html">Home</a></li>
                     <li>/</li>
-                    <li><span>Contact Us</span></li>
+                    <li><span>Liên Hệ</span></li>
                 </ul><!-- /.thm-breadcrumb list-unstyled -->
-                <h2>Contact</h2>
+                <h2>Liên Hệ</h2>
             </div><!-- /.container -->
         </section><!-- /.page-header -->
 
@@ -144,7 +144,7 @@
                         <div class="contact-one__content">
                             <div class="block-title">
                                 <div class="block-title__image"></div><!-- /.block-title__image -->
-                                <p>Contact now</p>
+                                <p>Liên hệ ngay</p>
                                 <h3>Leave A Message</h3>
                             </div><!-- /.block-title -->
                             <div class="contact-one__summery">
@@ -166,19 +166,19 @@
                                     <input type="text" name="name" placeholder="Full Name">
                                 </div><!-- /.col-lg-6 -->
                                 <div class="col-lg-6">
-                                    <input type="text" name="email" placeholder="Email Address">
+                                    <input type="text" name="email" placeholder="Địa chỉ Email">
                                 </div><!-- /.col-lg-6 -->
                                 <div class="col-lg-6">
-                                    <input type="text" name="phone" placeholder="Phone Number">
+                                    <input type="text" name="phone" placeholder="Số Điện Thoại">
                                 </div><!-- /.col-lg-6 -->
                                 <div class="col-lg-6">
-                                    <input type="text" name="subject" placeholder="Subject">
+                                    <input type="text" name="subject" placeholder="Chủ Đề">
                                 </div><!-- /.col-lg-6 -->
                                 <div class="col-lg-12">
-                                    <textarea name="message" placeholder="Write Message"></textarea>
+                                    <textarea name="message" placeholder="Viết Tin Nhắn"></textarea>
                                 </div><!-- /.col-lg-12 -->
                                 <div class="col-lg-12">
-                                    <button type="submit" class="thm-btn">Send a Message</button><!-- /.thm-btn -->
+                                    <button type="submit" class="thm-btn">Gửi Tin Nhắn</button><!-- /.thm-btn -->
                                 </div><!-- /.col-lg-12 -->
                             </div><!-- /.row -->
                         </form>
@@ -193,19 +193,19 @@
                     <div class="row no-gutters">
                         <div class="col-sm-12 col-md-12 col-lg-4">
                             <div class="contact-infos__single">
-                                <h3>About Company</h3>
+                                <h3>Về GREEN SUN HANAM</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit nulla sit amet lectus neque.</p>
                             </div><!-- /.contact-infos__single -->
                         </div><!-- /.col-sm-12 col-md-12 col-lg-4 -->
                         <div class="col-sm-12 col-md-12 col-lg-4">
                             <div class="contact-infos__single">
-                                <h3>Visit Company</h3>
-                                <p>66 broklyn golden street line, New York. United States of America.</p>
+                                <h3>Thăm GREEN SUN HANAM</h3>
+                                <p>123 Nguyễn Huệ, Quận 1, TP. Hồ Chí Minh, Việt Nam.</p>
                             </div><!-- /.contact-infos__single -->
                         </div><!-- /.col-sm-12 col-md-12 col-lg-4 -->
                         <div class="col-sm-12 col-md-12 col-lg-4">
                             <div class="contact-infos__single">
-                                <h3>Call or Email</h3>
+                                <h3>Gọi Hoặc Email</h3>
                                 <p><a href="mailto:needhelp@company.com">needhelp@company.com</a> <br>
                                     <a href="mailto:info@company.com">info@company.com</a><br>
                                     <a href="tel:666-888-0000">666 888 0000</a>
@@ -230,7 +230,7 @@
                             <a href="index.html" class="footer-widget__Logo">
                                 <img src="assets/images/logo-light.png" width="153" alt="">
                             </a>
-                            <p>There are many variations of passages of lorem ipsum available, but the majority suffered.
+                            <p>GREEN SUN HANAM là công ty hàng đầu trong lĩnh vực sản xuất pin năng lượng xanh, cam kết mang đến những sản phẩm chất lượng cao và an toàn cho người sử dụng.
                             </p>
                             <form action="#" data-url="YOUR_MAILCHIMP_URL" class="mc-form">
                                 <input type="email" name="EMAIL" placeholder="Email Address">
@@ -287,12 +287,12 @@
                             </li>
                             <li>
                                 <i class="agrikon-icon-email"></i>
-                                <a href="mailto:needhelp@company.com">needhelp@company.com</a>
+                                <a href="mailto:info@greensunhanam.com">info@greensunhanam.com</a>
                             </li>
                             <li>
                                 <i class="agrikon-icon-pin"></i>
-                                <a href="#">80 broklyn golden street line
-                                    New York, USA</a>
+                                <a href="#">123 Nguyễn Huệ, Quận 1
+                                    TP. Hồ Chí Minh, Việt Nam</a>
                             </li>
                         </ul><!-- /.list-unstyled -->
                     </div><!-- /.col-sm-12 col-md-6 col-lg-3 -->
@@ -301,7 +301,7 @@
         </footer><!-- /.site-footer -->
         <div class="bottom-footer">
             <div class="container">
-                <p>© Copyright 2020 by Company.com</p>
+                <p>© Copyright 2024 by GREEN SUN HANAM</p>
                 <div class="bottom-footer__links">
                     <a href="#">Terms & Conditions</a>
                     <a href="#">Privacy Policy</a>
@@ -329,7 +329,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="agrikon-icon-email"></i>
-                    <a href="mailto:needhelp@agrikon.com">needhelp@agrikon.com</a>
+                    <a href="mailto:info@greensunhanam.com">info@greensunhanam.com</a>
                 </li>
                 <li>
                     <i class="agrikon-icon-telephone"></i>
@@ -367,7 +367,7 @@
         <div class="search-popup__content">
             <form action="#">
                 <label for="search" class="sr-only">search here</label><!-- /.sr-only -->
-                <input type="text" id="search" placeholder="Search Here..." />
+                <input type="text" id="search" placeholder="Tìm kiếm tại đây..." />
                 <button type="submit" aria-label="search submit" class="thm-btn">
                     <i class="fa fa-search"></i>
                 </button>
