--- a/index-2.html
+++ b/index-2.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trang Chủ 2 || VietDS || Giải pháp Pin Năng Lượng Xanh</title>
+    <title>Trang Chủ 2 || GREEN SUN HANAM || Giải pháp Pin Năng Lượng Xanh</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicons/site.webmanifest">
-    <meta name="description" content="VietDS - Chuyên sản xuất và cung cấp pin điện thoại năng lượng xanh, pin sạc an toàn và thân thiện với môi trường">
+    <meta name="description" content="GREEN SUN HANAM - Chuyên sản xuất và cung cấp pin điện thoại năng lượng xanh, pin sạc an toàn và thân thiện với môi trường">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -42,7 +42,7 @@
             <div class="topbar">
                 <div class="container">
                     <div class="topbar__left text-center">
-                        <p>Chào mừng đến với VietDS</p>
+                        <p>Chào mừng đến với GREEN SUN HANAM</p>
                     </div><!-- /.topbar__left -->
                 </div><!-- /.container -->
             </div><!-- /.topbar -->
@@ -54,42 +54,42 @@
                     </div><!-- /.logo-box -->
                     <ul class="main-menu__list">
                         <li class="dropdown">
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Trang Chủ</a>
                             <ul>
                                 <li>
-                                    <a href="index.html">Home One</a>
+                                    <a href="index.html">Trang Chủ 1</a>
                                 </li>
-                                <li><a href="index-2.html">Home Two</a></li>
+                                <li><a href="index-2.html">Trang Chủ 2</a></li>
                                 <li class="dropdown">
-                                    <a href="#">Header Styles</a>
+                                    <a href="#">Kiểu Tiêu Đề</a>
                                     <ul>
-                                        <li><a href="index.html">Header One</a></li>
-                                        <li><a href="index-2.html">Header Two</a></li>
+                                        <li><a href="index.html">Tiêu Đề 1</a></li>
+                                        <li><a href="index-2.html">Tiêu Đề 2</a></li>
                                     </ul>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="about.html">Giới Thiệu</a>
                         </li>
-                        <li class="dropdown"><a href="#">Pages</a>
+                        <li class="dropdown"><a href="#">Trang</a>
                             <ul>
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="service-details.html">Service Details</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="services.html">Dịch Vụ</a></li>
+                                <li><a href="service-details.html">Chi Tiết Dịch Vụ</a></li>
+                                <li><a href="contact.html">Liên Hệ</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="projects.html">Projects</a>
+                            <a href="projects.html">Dự Án</a>
                             <ul>
-                                <li><a href="projects.html">Projects</a></li>
-                                <li><a href="project-details.html">Projects Details</a></li>
+                                <li><a href="projects.html">Dự Án</a></li>
+                                <li><a href="project-details.html">Chi Tiết Dự Án</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a href="blog.html">News</a>
+                        <li class="dropdown"><a href="blog.html">Tin Tức</a>
                             <ul>
-                                <li><a href="blog.html">News</a></li>
-                                <li><a href="blog-details.html">News Details</a></li>
+                                <li><a href="blog.html">Tin Tức</a></li>
+                                <li><a href="blog-details.html">Chi Tiết Tin Tức</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -191,7 +191,7 @@
                                     Sản Phẩm Sinh Thái</h3>
                             </div><!-- /.block-title -->
                             <div class="about-two__summery">
-                                <p>Với hơn 10 năm kinh nghiệm trong ngành sản xuất pin, VietDS đã trở thành thương hiệu uy tín trong lĩnh vực pin năng lượng xanh. Chúng tôi cam kết mang đến những sản phẩm chất lượng cao, an toàn cho người dùng và thân thiện với môi trường.</p>
+                                <p>Với hơn 10 năm kinh nghiệm trong ngành sản xuất pin, GREEN SUN HANAM đã trở thành thương hiệu uy tín trong lĩnh vực pin năng lượng xanh. Chúng tôi cam kết mang đến những sản phẩm chất lượng cao, an toàn cho người dùng và thân thiện với môi trường.</p>
                             </div><!-- /.about-two__summery -->
                             <div class="row">
                                 <div class="col-md-6">
@@ -279,8 +279,8 @@
             <div class="container">
                 <div class="block-title text-center">
                     <div class="block-title__image"></div><!-- /.block-title__image -->
-                    <p>Our Services list</p>
-                    <h3>What We’re Offering</h3>
+                    <p>Danh sách dịch vụ của chúng tôi</p>
+                    <h3>Chúng tôi cung cấp</h3>
                 </div><!-- /.block-title -->
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-3">
@@ -651,7 +651,7 @@
             <div class="container">
                 <h3>Agriculture Matters to
                     the Future</h3>
-                <a href="about.html" class="thm-btn">Discover More</a><!-- /.thm-btn -->
+                <a href="about.html" class="thm-btn">Khám Phá Thêm</a><!-- /.thm-btn -->
             </div><!-- /.container -->
         </section><!-- /.call-to-action__two -->
 
@@ -794,8 +794,8 @@
                         <div class="block-title">
                             <div class="block-title__image"></div><!-- /.block-title__image -->
                             <p>From the blog post</p>
-                            <h3>Latest News & Articles
-                                Directly from Blog</h3>
+                            <h3>Tin Tức & Bài Viết Mới Nhất
+                                Từ Blog</h3>
                         </div><!-- /.block-title -->
                     </div><!-- /.col-lg-6 -->
                     <div class="col-lg-6">
@@ -818,7 +818,7 @@
                                     <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
                                 </div><!-- /.blog-card__meta -->
                                 <h3><a href="blog-details.html">Best Way to Do Eco and Agriculture</a></h3>
-                                <a href="blog-details.html" class="thm-btn">Read More</a><!-- /.thm-btn -->
+                                <a href="blog-details.html" class="thm-btn">Đọc Thêm</a><!-- /.thm-btn -->
                             </div><!-- /.blog-card__content -->
                         </div><!-- /.blog-card -->
                     </div><!-- /.col-md-12 col-lg-4 -->
@@ -835,7 +835,7 @@
                                     <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
                                 </div><!-- /.blog-card__meta -->
                                 <h3><a href="blog-details.html">Leverage agile frameworks to provide</a></h3>
-                                <a href="blog-details.html" class="thm-btn">Read More</a><!-- /.thm-btn -->
+                                <a href="blog-details.html" class="thm-btn">Đọc Thêm</a><!-- /.thm-btn -->
                             </div><!-- /.blog-card__content -->
                         </div><!-- /.blog-card -->
                     </div><!-- /.col-md-12 col-lg-4 -->
@@ -852,7 +852,7 @@
                                     <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
                                 </div><!-- /.blog-card__meta -->
                                 <h3><a href="blog-details.html">Organically grow the holistic world view</a></h3>
-                                <a href="blog-details.html" class="thm-btn">Read More</a><!-- /.thm-btn -->
+                                <a href="blog-details.html" class="thm-btn">Đọc Thêm</a><!-- /.thm-btn -->
                             </div><!-- /.blog-card__content -->
                         </div><!-- /.blog-card -->
                     </div><!-- /.col-md-12 col-lg-4 -->
@@ -870,7 +870,7 @@
                         market globally</h3>
                 </div><!-- /.call-to-action__content -->
                 <div class="call-to-action__button">
-                    <a href="services.html" class="thm-btn">Discover More</a><!-- /.thm-btn -->
+                    <a href="services.html" class="thm-btn">Khám Phá Thêm</a><!-- /.thm-btn -->
                 </div><!-- /.call-to-action__button -->
             </div><!-- /.container -->
         </section><!-- /.call-to-action -->
@@ -942,7 +942,7 @@
                             </li>
                             <li>
                                 <i class="agrikon-icon-email"></i>
-                                <a href="mailto:needhelp@company.com">needhelp@company.com</a>
+                                <a href="mailto:info@greensunhanam.com">info@greensunhanam.com</a>
                             </li>
                             <li>
                                 <i class="agrikon-icon-pin"></i>
@@ -956,7 +956,7 @@
         </footer><!-- /.site-footer -->
         <div class="bottom-footer">
             <div class="container">
-                <p>© Copyright 2020 by Company.com</p>
+                <p>© Copyright 2024 by GREEN SUN HANAM</p>
                 <div class="bottom-footer__links">
                     <a href="#">Terms & Conditions</a>
                     <a href="#">Privacy Policy</a>
@@ -984,7 +984,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="agrikon-icon-email"></i>
-                    <a href="mailto:needhelp@agrikon.com">needhelp@agrikon.com</a>
+                    <a href="mailto:info@greensunhanam.com">info@greensunhanam.com</a>
                 </li>
                 <li>
                     <i class="agrikon-icon-telephone"></i>
@@ -1022,7 +1022,7 @@
         <div class="search-popup__content">
             <form action="#">
                 <label for="search" class="sr-only">search here</label><!-- /.sr-only -->
-                <input type="text" id="search" placeholder="Search Here..." />
+                <input type="text" id="search" placeholder="Tìm kiếm tại đây..." />
                 <button type="submit" aria-label="search submit" class="thm-btn">
                     <i class="fa fa-search"></i>
                 </button>
