--- a/services.html
+++ b/services.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services Page || Agrikon || HTML Template For Agriculture Farm & Farmers</title>
+    <title>Dịch Vụ || GREEN SUN HANAM || Giải pháp Pin Năng Lượng Xanh</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicons/site.webmanifest">
-    <meta name="description" content="Agrikon HTML Template For Agriculture Farm & Farmers">
+    <meta name="description" content="GREEN SUN HANAM - Chuyên sản xuất và cung cấp pin điện thoại năng lượng xanh, pin sạc an toàn và thân thiện với môi trường">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -48,10 +48,10 @@
                             <a href="#" class="fab fa-pinterest-p"></a>
                             <a href="#" class="fab fa-instagram"></a>
                         </div><!-- /.topbar__social -->
-                        <p>Welcome to Agriculture HTML Template</p>
+                        <p>Chào mừng đến với GREEN SUN HANAM</p>
                     </div><!-- /.topbar__left -->
                     <div class="topbar__right">
-                        <a href="#"><i class="agrikon-icon-email"></i>needhelp@company.com</a>
+                        <a href="#"><i class="agrikon-icon-email"></i>info@greensunhanam.com</a>
                         <a href="#"><i class="agrikon-icon-clock"></i>Mon - Sat 8:00 - 6:30, Sunday - CLOSED</a>
                     </div><!-- /.topbar__right -->
                 </div><!-- /.container -->
@@ -64,42 +64,42 @@
                     </div><!-- /.logo-box -->
                     <ul class="main-menu__list">
                         <li class="dropdown">
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Trang Chủ</a>
                             <ul>
                                 <li>
-                                    <a href="index.html">Home One</a>
+                                    <a href="index.html">Trang Chủ 1</a>
                                 </li>
-                                <li><a href="index-2.html">Home Two</a></li>
+                                <li><a href="index-2.html">Trang Chủ 2</a></li>
                                 <li class="dropdown">
-                                    <a href="#">Header Styles</a>
+                                    <a href="#">Kiểu Tiêu Đề</a>
                                     <ul>
-                                        <li><a href="index.html">Header One</a></li>
-                                        <li><a href="index-2.html">Header Two</a></li>
+                                        <li><a href="index.html">Tiêu Đề 1</a></li>
+                                        <li><a href="index-2.html">Tiêu Đề 2</a></li>
                                     </ul>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="about.html">Giới Thiệu</a>
                         </li>
-                        <li class="dropdown"><a href="#">Pages</a>
+                        <li class="dropdown"><a href="#">Trang</a>
                             <ul>
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="service-details.html">Service Details</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="services.html">Dịch Vụ</a></li>
+                                <li><a href="service-details.html">Chi Tiết Dịch Vụ</a></li>
+                                <li><a href="contact.html">Liên Hệ</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="projects.html">Projects</a>
+                            <a href="projects.html">Dự Án</a>
                             <ul>
-                                <li><a href="projects.html">Projects</a></li>
-                                <li><a href="project-details.html">Projects Details</a></li>
+                                <li><a href="projects.html">Dự Án</a></li>
+                                <li><a href="project-details.html">Chi Tiết Dự Án</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a href="blog.html">News</a>
+                        <li class="dropdown"><a href="blog.html">Tin Tức</a>
                             <ul>
-                                <li><a href="blog.html">News</a></li>
-                                <li><a href="blog-details.html">News Details</a></li>
+                                <li><a href="blog.html">Tin Tức</a></li>
+                                <li><a href="blog-details.html">Chi Tiết Tin Tức</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -111,7 +111,7 @@
                         <a href="tel:92-666-888-0000" class="main-header__info-phone">
                             <i class="agrikon-icon-phone-call"></i>
                             <span class="main-header__info-phone-content">
-                                <span class="main-header__info-phone-text">Call Anytime</span>
+                                <span class="main-header__info-phone-text">Gọi Ngay</span>
                                 <span class="main-header__info-phone-title">92 666 888 0000</span>
                             </span><!-- /.main-header__info-phone-content -->
                         </a><!-- /.main-header__info-phone -->
@@ -129,9 +129,9 @@
             <!-- /.page-header__bg -->
             <div class="container">
                 <ul class="thm-breadcrumb list-unstyled">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Trang Chủ</a></li>
                     <li>/</li>
-                    <li><span>Services</span></li>
+                    <li><span>Dịch Vụ</span></li>
                 </ul><!-- /.thm-breadcrumb list-unstyled -->
                 <h2>Our Services</h2>
             </div><!-- /.container -->
@@ -150,7 +150,7 @@
                                 <div class="service-two__card-icon">
                                     <i class="agrikon-icon-tractor"></i>
                                 </div><!-- /.service-two__card-icon -->
-                                <h3><a href="service-details.html">Agriculture Products</a></h3>
+                                <h3><a href="service-details.html">Sản Phẩm Pin</a></h3>
                                 <p>Lorem ium dolor sit ametad pisicing elit sed simply do ut.</p>
                             </div><!-- /.service-two__card-content -->
                         </div><!-- /.service-two__card -->
@@ -164,8 +164,8 @@
                                 <div class="service-two__card-icon">
                                     <i class="agrikon-icon-organic-food"></i>
                                 </div><!-- /.service-two__card-icon -->
-                                <h3><a href="service-details.html">Oragnic
-                                        Products</a></h3>
+                                <h3><a href="service-details.html">Sản Phẩm
+                                        Hữu Cơ</a></h3>
                                 <p>Lorem ium dolor sit ametad pisicing elit sed simply do ut.</p>
                             </div><!-- /.service-two__card-content -->
                         </div><!-- /.service-two__card -->
@@ -179,8 +179,8 @@
                                 <div class="service-two__card-icon">
                                     <i class="agrikon-icon-vegetable"></i>
                                 </div><!-- /.service-two__card-icon -->
-                                <h3><a href="service-details.html">Fresh
-                                        Vegetables</a></h3>
+                                <h3><a href="service-details.html">Pin
+                                        Sạc Nhanh</a></h3>
                                 <p>Lorem ium dolor sit ametad pisicing elit sed simply do ut.</p>
                             </div><!-- /.service-two__card-content -->
                         </div><!-- /.service-two__card -->
@@ -194,8 +194,8 @@
                                 <div class="service-two__card-icon">
                                     <i class="agrikon-icon-dairy"></i>
                                 </div><!-- /.service-two__card-icon -->
-                                <h3><a href="service-details.html">Dairy
-                                        Products</a></h3>
+                                <h3><a href="service-details.html">Pin
+                                        Dự Phòng</a></h3>
                                 <p>Lorem ium dolor sit ametad pisicing elit sed simply do ut.</p>
                             </div><!-- /.service-two__card-content -->
                         </div><!-- /.service-two__card -->
@@ -212,8 +212,8 @@
                             <div class="block-title">
                                 <div class="block-title__image"></div><!-- /.block-title__image -->
                                 <p>What we’re offering</p>
-                                <h3>Better Agriculture for
-                                    Better Future</h3>
+                                <h3>Pin Năng Lượng Xanh cho
+                                    Tương Lai Tốt Đẹp</h3>
                             </div><!-- /.block-title -->
                             <div class="feature-one__summery">
                                 <p>There are many variations of passages of lorem ipsum available but the majority have suffered
@@ -245,7 +245,7 @@
             <div class="container">
                 <h3>Agriculture Matters to
                     the Future</h3>
-                <a href="about.html" class="thm-btn">Discover More</a><!-- /.thm-btn -->
+                <a href="about.html" class="thm-btn">Khám Phá Thêm</a><!-- /.thm-btn -->
             </div><!-- /.container -->
         </section><!-- /.call-to-action__two -->
 
@@ -253,15 +253,15 @@
             <div class="container">
                 <div class="block-title text-center">
                     <div class="block-title__image"></div><!-- /.block-title__image -->
-                    <p>Our Services list</p>
-                    <h3>What We’re Doing</h3>
+                    <p>Danh sách dịch vụ của chúng tôi</p>
+                    <h3>Chúng tôi đang làm</h3>
                 </div><!-- /.block-title -->
                 <div class="row">
                     <div class="col-md-12 col-lg-4">
                         <div class="service-one__box">
                             <img src="assets/images/services/service-1-1.jpg" alt="">
                             <div class="service-one__box-content">
-                                <h3><a href="service-details.html">Agriculture Leader</a></h3>
+                                <h3><a href="service-details.html">Dẫn Đầu Pin Xanh</a></h3>
                             </div><!-- /.service-one__box-content -->
                         </div><!-- /.service-one__box -->
                     </div><!-- /.col-md-12 col-lg-4 -->
@@ -269,7 +269,7 @@
                         <div class="service-one__box">
                             <img src="assets/images/services/service-1-2.jpg" alt="">
                             <div class="service-one__box-content">
-                                <h3><a href="service-details.html">Quality Standards</a></h3>
+                                <h3><a href="service-details.html">Tiêu Chuẩn Chất Lượng</a></h3>
                             </div><!-- /.service-one__box-content -->
                         </div><!-- /.service-one__box -->
                     </div><!-- /.col-md-12 col-lg-4 -->
@@ -277,7 +277,7 @@
                         <div class="service-one__box">
                             <img src="assets/images/services/service-1-3.jpg" alt="">
                             <div class="service-one__box-content">
-                                <h3><a href="service-details.html">Organic Services</a></h3>
+                                <h3><a href="service-details.html">Dịch Vụ Sinh Thái</a></h3>
                             </div><!-- /.service-one__box-content -->
                         </div><!-- /.service-one__box -->
                     </div><!-- /.col-md-12 col-lg-4 -->
@@ -392,9 +392,9 @@
                     </div><!-- /.col-lg-5 -->
                     <div class="col-lg-7">
                         <div class="call-to-action__three-content">
-                            <h3>Providing High Quality
-                                Products</h3>
-                            <a href="about.html" class="thm-btn">Discover More</a><!-- /.thm-btn -->
+                            <h3>Cung Cấp Sản Phẩm
+                                Chất Lượng Cao</h3>
+                            <a href="about.html" class="thm-btn">Khám Phá Thêm</a><!-- /.thm-btn -->
                         </div><!-- /.call-to-action__three-content -->
                     </div><!-- /.col-lg-7 -->
                 </div><!-- /.row -->
@@ -468,7 +468,7 @@
                             </li>
                             <li>
                                 <i class="agrikon-icon-email"></i>
-                                <a href="mailto:needhelp@company.com">needhelp@company.com</a>
+                                <a href="mailto:info@greensunhanam.com">info@greensunhanam.com</a>
                             </li>
                             <li>
                                 <i class="agrikon-icon-pin"></i>
@@ -482,7 +482,7 @@
         </footer><!-- /.site-footer -->
         <div class="bottom-footer">
             <div class="container">
-                <p>© Copyright 2020 by Company.com</p>
+                <p>© Copyright 2024 by GREEN SUN HANAM</p>
                 <div class="bottom-footer__links">
                     <a href="#">Terms & Conditions</a>
                     <a href="#">Privacy Policy</a>
@@ -510,7 +510,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="agrikon-icon-email"></i>
-                    <a href="mailto:needhelp@agrikon.com">needhelp@agrikon.com</a>
+                    <a href="mailto:info@greensunhanam.com">info@greensunhanam.com</a>
                 </li>
                 <li>
                     <i class="agrikon-icon-telephone"></i>
@@ -548,7 +548,7 @@
         <div class="search-popup__content">
             <form action="#">
                 <label for="search" class="sr-only">search here</label><!-- /.sr-only -->
-                <input type="text" id="search" placeholder="Search Here..." />
+                <input type="text" id="search" placeholder="Tìm kiếm tại đây..." />
                 <button type="submit" aria-label="search submit" class="thm-btn">
                     <i class="fa fa-search"></i>
                 </button>
