--- a/blog.html
+++ b/blog.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News Page || Agrikon || HTML Template For Agriculture Farm & Farmers</title>
+    <title>Tin Tức || GREEN SUN HANAM || Giải pháp Pin Năng Lượng Xanh</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicons/site.webmanifest">
-    <meta name="description" content="Agrikon HTML Template For Agriculture Farm & Farmers">
+    <meta name="description" content="GREEN SUN HANAM - Chuyên sản xuất và cung cấp pin điện thoại năng lượng xanh, pin sạc an toàn và thân thiện với môi trường">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -48,10 +48,10 @@
                             <a href="#" class="fab fa-pinterest-p"></a>
                             <a href="#" class="fab fa-instagram"></a>
                         </div><!-- /.topbar__social -->
-                        <p>Welcome to Agriculture HTML Template</p>
+                        <p>Chào mừng đến với GREEN SUN HANAM</p>
                     </div><!-- /.topbar__left -->
                     <div class="topbar__right">
-                        <a href="#"><i class="agrikon-icon-email"></i>needhelp@company.com</a>
+                        <a href="#"><i class="agrikon-icon-email"></i>info@greensunhanam.com</a>
                         <a href="#"><i class="agrikon-icon-clock"></i>Mon - Sat 8:00 - 6:30, Sunday - CLOSED</a>
                     </div><!-- /.topbar__right -->
                 </div><!-- /.container -->
@@ -64,42 +64,42 @@
                     </div><!-- /.logo-box -->
                     <ul class="main-menu__list">
                         <li class="dropdown">
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Trang Chủ</a>
                             <ul>
                                 <li>
-                                    <a href="index.html">Home One</a>
+                                    <a href="index.html">Trang Chủ 1</a>
                                 </li>
-                                <li><a href="index-2.html">Home Two</a></li>
+                                <li><a href="index-2.html">Trang Chủ 2</a></li>
                                 <li class="dropdown">
-                                    <a href="#">Header Styles</a>
+                                    <a href="#">Kiểu Tiêu Đề</a>
                                     <ul>
-                                        <li><a href="index.html">Header One</a></li>
-                                        <li><a href="index-2.html">Header Two</a></li>
+                                        <li><a href="index.html">Tiêu Đề 1</a></li>
+                                        <li><a href="index-2.html">Tiêu Đề 2</a></li>
                                     </ul>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="about.html">Giới Thiệu</a>
                         </li>
-                        <li class="dropdown"><a href="#">Pages</a>
+                        <li class="dropdown"><a href="#">Trang</a>
                             <ul>
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="service-details.html">Service Details</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="services.html">Dịch Vụ</a></li>
+                                <li><a href="service-details.html">Chi Tiết Dịch Vụ</a></li>
+                                <li><a href="contact.html">Liên Hệ</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="projects.html">Projects</a>
+                            <a href="projects.html">Dự Án</a>
                             <ul>
-                                <li><a href="projects.html">Projects</a></li>
-                                <li><a href="project-details.html">Projects Details</a></li>
+                                <li><a href="projects.html">Dự Án</a></li>
+                                <li><a href="project-details.html">Chi Tiết Dự Án</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a href="blog.html">News</a>
+                        <li class="dropdown"><a href="blog.html">Tin Tức</a>
                             <ul>
-                                <li><a href="blog.html">News</a></li>
-                                <li><a href="blog-details.html">News Details</a></li>
+                                <li><a href="blog.html">Tin Tức</a></li>
+                                <li><a href="blog-details.html">Chi Tiết Tin Tức</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -111,7 +111,7 @@
                         <a href="tel:92-666-888-0000" class="main-header__info-phone">
                             <i class="agrikon-icon-phone-call"></i>
                             <span class="main-header__info-phone-content">
-                                <span class="main-header__info-phone-text">Call Anytime</span>
+                                <span class="main-header__info-phone-text">Gọi Ngay</span>
                                 <span class="main-header__info-phone-title">92 666 888 0000</span>
                             </span><!-- /.main-header__info-phone-content -->
                         </a><!-- /.main-header__info-phone -->
@@ -129,9 +129,9 @@
             <!-- /.page-header__bg -->
             <div class="container">
                 <ul class="thm-breadcrumb list-unstyled">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Trang Chủ</a></li>
                     <li>/</li>
-                    <li><span>News</span></li>
+                    <li><span>Tin Tức</span></li>
                 </ul><!-- /.thm-breadcrumb list-unstyled -->
                 <h2>News Grid</h2>
             </div><!-- /.container -->
@@ -143,7 +143,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="blog-card">
                             <div class="blog-card__image">
-                                <img src="assets/images/blog/blog-grid-1.jpg" alt="Best Way to Do Eco and Agriculture">
+                                <img src="assets/images/blog/blog-grid-1.jpg" alt="Cách Tối Ưu Để Sử Dụng Pin Xanh">
                                 <a href="blog-details.html"></a>
                             </div><!-- /.blog-card__image -->
                             <div class="blog-card__content">
@@ -152,15 +152,15 @@
                                     <a href="blog-details.html"><i class="far fa-user-circle"></i> by Admin</a>
                                     <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
                                 </div><!-- /.blog-card__meta -->
-                                <h3><a href="blog-details.html">Best Way to Do Eco and Agriculture</a></h3>
-                                <a href="blog-details.html" class="thm-btn">Read More</a><!-- /.thm-btn -->
+                                <h3><a href="blog-details.html">Cách Tối Ưu Để Sử Dụng Pin Xanh</a></h3>
+                                <a href="blog-details.html" class="thm-btn">Đọc Thêm</a><!-- /.thm-btn -->
                             </div><!-- /.blog-card__content -->
                         </div><!-- /.blog-card -->
                     </div><!-- /.col-md-6 col-lg-4 -->
                     <div class="col-md-6 col-lg-4">
                         <div class="blog-card">
                             <div class="blog-card__image">
-                                <img src="assets/images/blog/blog-grid-2.jpg" alt="Leverage agile frameworks to provide">
+                                <img src="assets/images/blog/blog-grid-2.jpg" alt="Tận Dụng Công Nghệ Linh Hoạt Để Cung Cấp">
                                 <a href="blog-details.html"></a>
                             </div><!-- /.blog-card__image -->
                             <div class="blog-card__content">
@@ -169,15 +169,15 @@
                                     <a href="blog-details.html"><i class="far fa-user-circle"></i> by Admin</a>
                                     <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
                                 </div><!-- /.blog-card__meta -->
-                                <h3><a href="blog-details.html">Leverage agile frameworks to provide</a></h3>
-                                <a href="blog-details.html" class="thm-btn">Read More</a><!-- /.thm-btn -->
+                                <h3><a href="blog-details.html">Tận Dụng Công Nghệ Linh Hoạt Để Cung Cấp</a></h3>
+                                <a href="blog-details.html" class="thm-btn">Đọc Thêm</a><!-- /.thm-btn -->
                             </div><!-- /.blog-card__content -->
                         </div><!-- /.blog-card -->
                     </div><!-- /.col-md-6 col-lg-4 -->
                     <div class="col-md-6 col-lg-4">
                         <div class="blog-card">
                             <div class="blog-card__image">
-                                <img src="assets/images/blog/blog-grid-3.jpg" alt="Organically grow the holistic world view">
+                                <img src="assets/images/blog/blog-grid-3.jpg" alt="Phát Triển Toàn Diện Giải Pháp Pin Xanh">
                                 <a href="blog-details.html"></a>
                             </div><!-- /.blog-card__image -->
                             <div class="blog-card__content">
@@ -186,15 +186,15 @@
                                     <a href="blog-details.html"><i class="far fa-user-circle"></i> by Admin</a>
                                     <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
                                 </div><!-- /.blog-card__meta -->
-                                <h3><a href="blog-details.html">Organically grow the holistic world view</a></h3>
-                                <a href="blog-details.html" class="thm-btn">Read More</a><!-- /.thm-btn -->
+                                <h3><a href="blog-details.html">Phát Triển Toàn Diện Giải Pháp Pin Xanh</a></h3>
+                                <a href="blog-details.html" class="thm-btn">Đọc Thêm</a><!-- /.thm-btn -->
                             </div><!-- /.blog-card__content -->
                         </div><!-- /.blog-card -->
                     </div><!-- /.col-md-6 col-lg-4 -->
                     <div class="col-md-6 col-lg-4">
                         <div class="blog-card">
                             <div class="blog-card__image">
-                                <img src="assets/images/blog/blog-grid-4.jpg" alt="Bring to the table win-win survival">
+                                <img src="assets/images/blog/blog-grid-4.jpg" alt="Công Nghệ Pin Bền Vững">
                                 <a href="blog-details.html"></a>
                             </div><!-- /.blog-card__image -->
                             <div class="blog-card__content">
@@ -203,15 +203,15 @@
                                     <a href="blog-details.html"><i class="far fa-user-circle"></i> by Admin</a>
                                     <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
                                 </div><!-- /.blog-card__meta -->
-                                <h3><a href="blog-details.html">Bring to the table win-win survival</a></h3>
-                                <a href="blog-details.html" class="thm-btn">Read More</a><!-- /.thm-btn -->
+                                <h3><a href="blog-details.html">Công Nghệ Pin Bền Vững</a></h3>
+                                <a href="blog-details.html" class="thm-btn">Đọc Thêm</a><!-- /.thm-btn -->
                             </div><!-- /.blog-card__content -->
                         </div><!-- /.blog-card -->
                     </div><!-- /.col-md-6 col-lg-4 -->
                     <div class="col-md-6 col-lg-4">
                         <div class="blog-card">
                             <div class="blog-card__image">
-                                <img src="assets/images/blog/blog-grid-5.jpg" alt="At the end of the day, going forward">
+                                <img src="assets/images/blog/blog-grid-5.jpg" alt="Tương Lai Pin Năng Lượng Xanh">
                                 <a href="blog-details.html"></a>
                             </div><!-- /.blog-card__image -->
                             <div class="blog-card__content">
@@ -220,15 +220,15 @@
                                     <a href="blog-details.html"><i class="far fa-user-circle"></i> by Admin</a>
                                     <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
                                 </div><!-- /.blog-card__meta -->
-                                <h3><a href="blog-details.html">At the end of the day, going forward</a></h3>
-                                <a href="blog-details.html" class="thm-btn">Read More</a><!-- /.thm-btn -->
+                                <h3><a href="blog-details.html">Tương Lai Pin Năng Lượng Xanh</a></h3>
+                                <a href="blog-details.html" class="thm-btn">Đọc Thêm</a><!-- /.thm-btn -->
                             </div><!-- /.blog-card__content -->
                         </div><!-- /.blog-card -->
                     </div><!-- /.col-md-6 col-lg-4 -->
                     <div class="col-md-6 col-lg-4">
                         <div class="blog-card">
                             <div class="blog-card__image">
-                                <img src="assets/images/blog/blog-grid-6.jpg" alt="User generated content in real-time">
+                                <img src="assets/images/blog/blog-grid-6.jpg" alt="Nội Dung Người Dùng Tạo Thời Gian Thực">
                                 <a href="blog-details.html"></a>
                             </div><!-- /.blog-card__image -->
                             <div class="blog-card__content">
@@ -237,8 +237,8 @@
                                     <a href="blog-details.html"><i class="far fa-user-circle"></i> by Admin</a>
                                     <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
                                 </div><!-- /.blog-card__meta -->
-                                <h3><a href="blog-details.html">User generated content in real-time</a></h3>
-                                <a href="blog-details.html" class="thm-btn">Read More</a><!-- /.thm-btn -->
+                                <h3><a href="blog-details.html">Nội Dung Người Dùng Tạo Thời Gian Thực</a></h3>
+                                <a href="blog-details.html" class="thm-btn">Đọc Thêm</a><!-- /.thm-btn -->
                             </div><!-- /.blog-card__content -->
                         </div><!-- /.blog-card -->
                     </div><!-- /.col-md-6 col-lg-4 -->
@@ -316,7 +316,7 @@
                             </li>
                             <li>
                                 <i class="agrikon-icon-email"></i>
-                                <a href="mailto:needhelp@company.com">needhelp@company.com</a>
+                                <a href="mailto:info@greensunhanam.com">info@greensunhanam.com</a>
                             </li>
                             <li>
                                 <i class="agrikon-icon-pin"></i>
@@ -330,7 +330,7 @@
         </footer><!-- /.site-footer -->
         <div class="bottom-footer">
             <div class="container">
-                <p>© Copyright 2020 by Company.com</p>
+                <p>© Copyright 2024 by GREEN SUN HANAM</p>
                 <div class="bottom-footer__links">
                     <a href="#">Terms & Conditions</a>
                     <a href="#">Privacy Policy</a>
@@ -358,7 +358,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="agrikon-icon-email"></i>
-                    <a href="mailto:needhelp@agrikon.com">needhelp@agrikon.com</a>
+                    <a href="mailto:info@greensunhanam.com">info@greensunhanam.com</a>
                 </li>
                 <li>
                     <i class="agrikon-icon-telephone"></i>
@@ -396,7 +396,7 @@
         <div class="search-popup__content">
             <form action="#">
                 <label for="search" class="sr-only">search here</label><!-- /.sr-only -->
-                <input type="text" id="search" placeholder="Search Here..." />
+                <input type="text" id="search" placeholder="Tìm kiếm tại đây..." />
                 <button type="submit" aria-label="search submit" class="thm-btn">
                     <i class="fa fa-search"></i>
                 </button>
