--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VietDS|| Giải pháp Pin Năng Lượng Xanh</title>
+    <title>GREEN SUN HANAM|| Giải pháp Pin Năng Lượng Xanh</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicons/site.webmanifest">
-    <meta name="description" content="VietDS - Chuyên sản xuất và cung cấp pin điện thoại năng lượng xanh, pin sạc an toàn và thân thiện với môi trường">
+    <meta name="description" content="GREEN SUN HANAM - Chuyên sản xuất và cung cấp pin điện thoại năng lượng xanh, pin sạc an toàn và thân thiện với môi trường">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -48,10 +48,10 @@
                             <a href="#" class="fab fa-pinterest-p"></a>
                             <a href="#" class="fab fa-instagram"></a>
                         </div><!-- /.topbar__social -->
-                        <p>Chào mừng đến với VietDS</p>
+                        <p>Chào mừng đến với GREEN SUN HANAM</p>
                     </div><!-- /.topbar__left -->
                     <div class="topbar__right">
-                        <a href="#"><i class="agrikon-icon-email"></i>info@vietds.com</a>
+                        <a href="#"><i class="agrikon-icon-email"></i>info@greensunhanam.com</a>
                         <a href="#"><i class="agrikon-icon-clock"></i>Thứ 2 - Thứ 6: 8:00 - 18:00, Thứ 7 - Chủ nhật: NGHỈ</a>
                     </div><!-- /.topbar__right -->
                 </div><!-- /.container -->
@@ -64,42 +64,42 @@
                     </div><!-- /.logo-box -->
                     <ul class="main-menu__list">
                         <li class="dropdown">
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Trang Chủ</a>
                             <ul>
                                 <li>
-                                    <a href="index.html">Home One</a>
+                                    <a href="index.html">Trang Chủ 1</a>
                                 </li>
-                                <li><a href="index-2.html">Home Two</a></li>
+                                <li><a href="index-2.html">Trang Chủ 2</a></li>
                                 <li class="dropdown">
-                                    <a href="#">Header Styles</a>
+                                    <a href="#">Kiểu Tiêu Đề</a>
                                     <ul>
-                                        <li><a href="index.html">Header One</a></li>
-                                        <li><a href="index-2.html">Header Two</a></li>
+                                        <li><a href="index.html">Tiêu Đề 1</a></li>
+                                        <li><a href="index-2.html">Tiêu Đề 2</a></li>
                                     </ul>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="about.html">Giới Thiệu</a>
                         </li>
-                        <li class="dropdown"><a href="#">Pages</a>
+                        <li class="dropdown"><a href="#">Trang</a>
                             <ul>
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="service-details.html">Service Details</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="services.html">Dịch Vụ</a></li>
+                                <li><a href="service-details.html">Chi Tiết Dịch Vụ</a></li>
+                                <li><a href="contact.html">Liên Hệ</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="projects.html">Projects</a>
+                            <a href="projects.html">Dự Án</a>
                             <ul>
-                                <li><a href="projects.html">Projects</a></li>
-                                <li><a href="project-details.html">Projects Details</a></li>
+                                <li><a href="projects.html">Dự Án</a></li>
+                                <li><a href="project-details.html">Chi Tiết Dự Án</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a href="blog.html">News</a>
+                        <li class="dropdown"><a href="blog.html">Tin Tức</a>
                             <ul>
-                                <li><a href="blog.html">News</a></li>
-                                <li><a href="blog-details.html">News Details</a></li>
+                                <li><a href="blog.html">Tin Tức</a></li>
+                                <li><a href="blog-details.html">Chi Tiết Tin Tức</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -146,11 +146,11 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-xl-7 col-lg-7">
-                                    <span class="tagline">Welcome to Agriculture Farm</span>
+                                    <span class="tagline">Chào mừng đến với Pin Năng Lượng Xanh</span>
                                     <h2><span>Pin Năng Lượng</span> <br>
-                                        Xanh & Bền Vững</h2>
-                                    <p>Chúng tôi chuyên sản xuất và cung cấp các loại pin điện thoại năng lượng xanh cao cấp, <br>an toàn cho người dùng và thân thiện với môi trường.</p>
-                                    <a href="#" class=" thm-btn">Discover More</a>
+                                        Xanh & Bền Vững cho Thiết Bị Di Động</h2>
+                                    <p>Chúng tôi chuyên sản xuất và cung cấp các loại pin điện thoại năng lượng xanh cao cấp, an toàn cho người dùng và thân thiện với môi trường. Với công nghệ tiên tiến và quy trình sản xuất hiện đại, chúng tôi cam kết mang đến những sản phẩm pin chất lượng cao, bền bỉ và hiệu quả nhất.</p>
+                                    <a href="#" class=" thm-btn">Khám Phá Thêm</a>
                                     <!-- /.thm-btn dynamic-radius -->
                                 </div><!-- /.col-lg-7 text-right -->
                             </div><!-- /.row -->
@@ -163,12 +163,12 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-xl-7 col-lg-7">
-                                    <span class="tagline">Welcome to Agriculture Farm</span>
-                                    <h2><span>Agriculture</span><br>
-                                        & Eco Farming</h2>
+                                    <span class="tagline">Chào mừng đến với Pin Năng Lượng Xanh</span>
+                                    <h2><span>Công Nghệ Pin</span><br>
+                                        Tiên Tiến & An Toàn</h2>
                                     <p>There are many of passages of lorem Ipsum, but the majori have <br> suffered alteration
                                         in some form.</p>
-                                    <a href="#" class=" thm-btn">Discover More</a>
+                                    <a href="#" class=" thm-btn">Khám Phá Thêm</a>
                                     <!-- /.thm-btn dynamic-radius -->
                                 </div><!-- /.col-lg-7 text-right -->
                             </div><!-- /.row -->
@@ -235,7 +235,7 @@
                         <div class="about-one__content">
                             <div class="block-title text-left">
                                 <div class="block-title__image"></div><!-- /.block-title__image -->
-                                <p>Chào mừng đến với VietDS</p>
+                                <p>Chào mừng đến với GREEN SUN HANAM</p>
                                 <h3>Pin Năng Lượng Xanh cho
                                     Tương Lai Tốt Đẹp</h3>
                             </div><!-- /.block-title -->
@@ -263,7 +263,7 @@
                                     </div><!-- /.col-lg-6 -->
                                 </div><!-- /.row -->
                             </div><!-- /.about-one__icon-row -->
-                            <a href="about.html" class="thm-btn">Discover More</a><!-- /.thm-btn -->
+                            <a href="about.html" class="thm-btn">Khám Phá Thêm</a><!-- /.thm-btn -->
                         </div><!-- /.about-one__content -->
                     </div><!-- /.col-lg-6 -->
                 </div><!-- /.row -->
@@ -275,8 +275,8 @@
             <div class="container">
                 <div class="block-title text-center">
                     <div class="block-title__image"></div><!-- /.block-title__image -->
-                    <p>Our Services list</p>
-                    <h3>What We’re Offering</h3>
+                    <p>Danh sách dịch vụ của chúng tôi</p>
+                    <h3>Chúng tôi cung cấp</h3>
                 </div><!-- /.block-title -->
                 <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-3">
@@ -446,7 +446,7 @@
                         <div class="call-to-action__three-content">
                             <h3>Cung Cấp Sản Phẩm
                                 Chất Lượng Cao</h3>
-                            <a href="about.html" class="thm-btn">Discover More</a><!-- /.thm-btn -->
+                            <a href="about.html" class="thm-btn">Khám Phá Thêm</a><!-- /.thm-btn -->
                         </div><!-- /.call-to-action__three-content -->
                     </div><!-- /.col-lg-7 -->
                 </div><!-- /.row -->
@@ -467,7 +467,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div><!-- /.testimonials-one__icons -->
-                            <p>Sản phẩm pin của VietDS có chất lượng vượt trội, giá cả cạnh tranh và dịch vụ khách hàng xuất sắc. Thật sự hài lòng khi được sử dụng sản phẩm bền bỉ và an toàn này.</p>
+                            <p>Sản phẩm pin của GREEN SUN HANAM có chất lượng vượt trội, giá cả cạnh tranh và dịch vụ khách hàng xuất sắc. Thật sự hài lòng khi được sử dụng sản phẩm bền bỉ và an toàn này.</p>
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
                             <div class="testimonials-one__icons">
@@ -477,7 +477,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div><!-- /.testimonials-one__icons -->
-                            <p>Tôi đã sử dụng pin của VietDS được 6 tháng và rất hài lòng về thời lượng sử dụng cũng như độ bền của sản phẩm. Chắc chắn sẽ tiếp tục ủng hộ.</p>
+                            <p>Tôi đã sử dụng pin của GREEN SUN HANAM được 6 tháng và rất hài lòng về thời lượng sử dụng cũng như độ bền của sản phẩm. Chắc chắn sẽ tiếp tục ủng hộ.</p>
                         </div><!-- /.swiper-slide -->
                         <div class="swiper-slide">
                             <div class="testimonials-one__icons">
@@ -487,7 +487,7 @@
                                 <i class="fas fa-star"></i>
                                 <i class="fas fa-star"></i>
                             </div><!-- /.testimonials-one__icons -->
-                            <p>Pin sạc nhanh của VietDS thực sự ấn tượng, chỉ cần 30 phút là sạc được 70% pin. Rất tiện lợi cho người dùng bận rộn như tôi.</p>
+                            <p>Pin sạc nhanh của GREEN SUN HANAM thực sự ấn tượng, chỉ cần 30 phút là sạc được 70% pin. Rất tiện lợi cho người dùng bận rộn như tôi.</p>
                         </div><!-- /.swiper-slide -->
                     </div><!-- /.swiper-wrapper -->
                 </div><!-- /#testimonials-one__carousel -->
@@ -547,8 +547,8 @@
                             <div class="block-title">
                                 <div class="block-title__image"></div><!-- /.block-title__image -->
                                 <p>From the blog post</p>
-                                <h3>Latest News & Articles
-                                    Directly from Blog</h3>
+                                <h3>Tin Tức & Bài Viết Mới Nhất
+                                    Từ Blog</h3>
                             </div><!-- /.block-title -->
                         </div><!-- /.col-lg-6 -->
                         <div class="col-lg-6">
@@ -572,7 +572,7 @@
                                         <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
                                     </div><!-- /.blog-card__meta -->
                                     <h3><a href="blog-details.html">Best Way to Do Eco and Agriculture</a></h3>
-                                    <a href="blog-details.html" class="thm-btn">Read More</a><!-- /.thm-btn -->
+                                    <a href="blog-details.html" class="thm-btn">Đọc Thêm</a><!-- /.thm-btn -->
                                 </div><!-- /.blog-card__content -->
                             </div><!-- /.blog-card -->
                         </div><!-- /.col-md-12 col-lg-4 -->
@@ -589,7 +589,7 @@
                                         <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
                                     </div><!-- /.blog-card__meta -->
                                     <h3><a href="blog-details.html">Leverage agile frameworks to provide</a></h3>
-                                    <a href="blog-details.html" class="thm-btn">Read More</a><!-- /.thm-btn -->
+                                    <a href="blog-details.html" class="thm-btn">Đọc Thêm</a><!-- /.thm-btn -->
                                 </div><!-- /.blog-card__content -->
                             </div><!-- /.blog-card -->
                         </div><!-- /.col-md-12 col-lg-4 -->
@@ -606,7 +606,7 @@
                                         <a href="blog-details.html"><i class="far fa-comments"></i> 2 Comments</a>
                                     </div><!-- /.blog-card__meta -->
                                     <h3><a href="blog-details.html">Organically grow the holistic world view</a></h3>
-                                    <a href="blog-details.html" class="thm-btn">Read More</a><!-- /.thm-btn -->
+                                    <a href="blog-details.html" class="thm-btn">Đọc Thêm</a><!-- /.thm-btn -->
                                 </div><!-- /.blog-card__content -->
                             </div><!-- /.blog-card -->
                         </div><!-- /.col-md-12 col-lg-4 -->
@@ -794,7 +794,7 @@
                             <a href="index.html" class="footer-widget__Logo">
                                 <img src="assets/images/logo-light.png" width="153" alt="">
                             </a>
-                            <p>VietDS là công ty hàng đầu trong lĩnh vực sản xuất và cung cấp pin năng lượng xanh, cam kết mang đến sản phẩm chất lượng cao và an toàn cho người sử dụng.
+                            <p>GREEN SUN HANAM là công ty hàng đầu trong lĩnh vực sản xuất và cung cấp pin năng lượng xanh, cam kết mang đến sản phẩm chất lượng cao và an toàn cho người sử dụng.
                             </p>
                             <form action="#" data-url="YOUR_MAILCHIMP_URL" class="mc-form">
                                 <input type="email" name="EMAIL" placeholder="Email Address">
@@ -851,7 +851,7 @@
                             </li>
                             <li>
                                 <i class="agrikon-icon-email"></i>
-                                <a href="mailto:info@vietds.com">info@vietds.com</a>
+                                <a href="mailto:info@greensunhanam.com">info@greensunhanam.com</a>
                             </li>
                             <li>
                                 <i class="agrikon-icon-pin"></i>
@@ -865,7 +865,7 @@
         </footer><!-- /.site-footer -->
         <div class="bottom-footer">
             <div class="container">
-                <p>© Copyright 2024 by VietDS.com</p>
+                <p>© Copyright 2024 by GREEN SUN HANAM</p>
                 <div class="bottom-footer__links">
                     <a href="#">Điều Khoản & Điều Kiện</a>
                     <a href="#">Chính Sách Bảo Mật</a>
@@ -893,7 +893,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="agrikon-icon-email"></i>
-                    <a href="mailto:info@vietds.com">info@vietds.com</a>
+                    <a href="mailto:info@greensunhanam.com">info@greensunhanam.com</a>
                 </li>
                 <li>
                     <i class="agrikon-icon-telephone"></i>
