--- a/project-details.html
+++ b/project-details.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Details || Agrikon || HTML Template For Agriculture Farm & Farmers</title>
+    <title>Chi Tiết Dự Án || GREEN SUN HANAM || Giải pháp Pin Năng Lượng Xanh</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png">
     <link rel="manifest" href="assets/images/favicons/site.webmanifest">
-    <meta name="description" content="Agrikon HTML Template For Agriculture Farm & Farmers">
+    <meta name="description" content="GREEN SUN HANAM - Chuyên sản xuất và cung cấp pin điện thoại năng lượng xanh, pin sạc an toàn và thân thiện với môi trường">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -48,10 +48,10 @@
                             <a href="#" class="fab fa-pinterest-p"></a>
                             <a href="#" class="fab fa-instagram"></a>
                         </div><!-- /.topbar__social -->
-                        <p>Welcome to Agriculture HTML Template</p>
+                        <p>Chào mừng đến với GREEN SUN HANAM</p>
                     </div><!-- /.topbar__left -->
                     <div class="topbar__right">
-                        <a href="#"><i class="agrikon-icon-email"></i>needhelp@company.com</a>
+                        <a href="#"><i class="agrikon-icon-email"></i>info@greensunhanam.com</a>
                         <a href="#"><i class="agrikon-icon-clock"></i>Mon - Sat 8:00 - 6:30, Sunday - CLOSED</a>
                     </div><!-- /.topbar__right -->
                 </div><!-- /.container -->
@@ -64,42 +64,42 @@
                     </div><!-- /.logo-box -->
                     <ul class="main-menu__list">
                         <li class="dropdown">
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Trang Chủ</a>
                             <ul>
                                 <li>
-                                    <a href="index.html">Home One</a>
+                                    <a href="index.html">Trang Chủ 1</a>
                                 </li>
-                                <li><a href="index-2.html">Home Two</a></li>
+                                <li><a href="index-2.html">Trang Chủ 2</a></li>
                                 <li class="dropdown">
-                                    <a href="#">Header Styles</a>
+                                    <a href="#">Kiểu Tiêu Đề</a>
                                     <ul>
-                                        <li><a href="index.html">Header One</a></li>
-                                        <li><a href="index-2.html">Header Two</a></li>
+                                        <li><a href="index.html">Tiêu Đề 1</a></li>
+                                        <li><a href="index-2.html">Tiêu Đề 2</a></li>
                                     </ul>
                                 </li>
                             </ul>
                         </li>
                         <li>
-                            <a href="about.html">About</a>
+                            <a href="about.html">Giới Thiệu</a>
                         </li>
-                        <li class="dropdown"><a href="#">Pages</a>
+                        <li class="dropdown"><a href="#">Trang</a>
                             <ul>
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="service-details.html">Service Details</a></li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="services.html">Dịch Vụ</a></li>
+                                <li><a href="service-details.html">Chi Tiết Dịch Vụ</a></li>
+                                <li><a href="contact.html">Liên Hệ</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
-                            <a href="projects.html">Projects</a>
+                            <a href="projects.html">Dự Án</a>
                             <ul>
-                                <li><a href="projects.html">Projects</a></li>
-                                <li><a href="project-details.html">Projects Details</a></li>
+                                <li><a href="projects.html">Dự Án</a></li>
+                                <li><a href="project-details.html">Chi Tiết Dự Án</a></li>
                             </ul>
                         </li>
-                        <li class="dropdown"><a href="blog.html">News</a>
+                        <li class="dropdown"><a href="blog.html">Tin Tức</a>
                             <ul>
-                                <li><a href="blog.html">News</a></li>
-                                <li><a href="blog-details.html">News Details</a></li>
+                                <li><a href="blog.html">Tin Tức</a></li>
+                                <li><a href="blog-details.html">Chi Tiết Tin Tức</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -111,7 +111,7 @@
                         <a href="tel:92-666-888-0000" class="main-header__info-phone">
                             <i class="agrikon-icon-phone-call"></i>
                             <span class="main-header__info-phone-content">
-                                <span class="main-header__info-phone-text">Call Anytime</span>
+                                <span class="main-header__info-phone-text">Gọi Ngay</span>
                                 <span class="main-header__info-phone-title">92 666 888 0000</span>
                             </span><!-- /.main-header__info-phone-content -->
                         </a><!-- /.main-header__info-phone -->
@@ -162,7 +162,7 @@
                         Organic Products
                     </li>
                 </ul><!-- /.list-unstyled project-details__list -->
-                <h2>Harvest Innovations</h2>
+                <h2>Đổi Mới Công Nghệ Pin</h2>
                 <p>
                     Lorem ipsum is simply free text used by copytyping refreshing. Neque porro est qui dolorem ipsum quia quaed
                     inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Aelltes port lacus quis enim var
@@ -223,7 +223,7 @@
                         <div class="projects-one__single">
                             <img src="assets/images/projects/project-1-1.jpg" alt="">
                             <div class="projects-one__content">
-                                <h3>Harvest Innovation</h3>
+                                <h3>Công Nghệ Pin Tiên Tiến</h3>
                                 <a href="project-details.html" class="projects-one__button"><i class="agrikon-icon-right-arrow"></i></a><!-- /.projects-one__button -->
                             </div><!-- /.projects-one__content -->
                         </div><!-- /.projects-one__single -->
@@ -232,7 +232,7 @@
                         <div class="projects-one__single">
                             <img src="assets/images/projects/project-1-2.jpg" alt="">
                             <div class="projects-one__content">
-                                <h3>Harvest Innovation</h3>
+                                <h3>Giải Pháp Pin Xanh</h3>
                                 <a href="project-details.html" class="projects-one__button"><i class="agrikon-icon-right-arrow"></i></a><!-- /.projects-one__button -->
                             </div><!-- /.projects-one__content -->
                         </div><!-- /.projects-one__single -->
@@ -241,7 +241,7 @@
                         <div class="projects-one__single">
                             <img src="assets/images/projects/project-1-3.jpg" alt="">
                             <div class="projects-one__content">
-                                <h3>Harvest Innovation</h3>
+                                <h3>Công Nghệ Tái Chế Pin</h3>
                                 <a href="project-details.html" class="projects-one__button"><i class="agrikon-icon-right-arrow"></i></a><!-- /.projects-one__button -->
                             </div><!-- /.projects-one__content -->
                         </div><!-- /.projects-one__single -->
@@ -318,7 +318,7 @@
                             </li>
                             <li>
                                 <i class="agrikon-icon-email"></i>
-                                <a href="mailto:needhelp@company.com">needhelp@company.com</a>
+                                <a href="mailto:info@greensunhanam.com">info@greensunhanam.com</a>
                             </li>
                             <li>
                                 <i class="agrikon-icon-pin"></i>
@@ -332,7 +332,7 @@
         </footer><!-- /.site-footer -->
         <div class="bottom-footer">
             <div class="container">
-                <p>© Copyright 2020 by Company.com</p>
+                <p>© Copyright 2024 by GREEN SUN HANAM</p>
                 <div class="bottom-footer__links">
                     <a href="#">Terms & Conditions</a>
                     <a href="#">Privacy Policy</a>
@@ -360,7 +360,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="agrikon-icon-email"></i>
-                    <a href="mailto:needhelp@agrikon.com">needhelp@agrikon.com</a>
+                    <a href="mailto:info@greensunhanam.com">info@greensunhanam.com</a>
                 </li>
                 <li>
                     <i class="agrikon-icon-telephone"></i>
@@ -398,7 +398,7 @@
         <div class="search-popup__content">
             <form action="#">
                 <label for="search" class="sr-only">search here</label><!-- /.sr-only -->
-                <input type="text" id="search" placeholder="Search Here..." />
+                <input type="text" id="search" placeholder="Tìm kiếm tại đây..." />
                 <button type="submit" aria-label="search submit" class="thm-btn">
                     <i class="fa fa-search"></i>
                 </button>
